Hide the ref <span> element to prevent element shifting when the link is clicked

--- a/src/resources/packages/classy/style.pcss
+++ b/src/resources/packages/classy/style.pcss
@@ -109,6 +109,12 @@
 		flex: 1 0 0;
 	}
 
+	.classy-field__currency-selector {
+		& > span {
+			display: none;
+		}
+	}
+
 	.classy-field__input-title {
 		font-size: var(--classy-font-size-15);
 		font-weight: var(--tec-font-weight-regular);
